@@ -69,7 +69,7 @@ public class HConnectionManager implements HConstants {
   public static HConnection getConnection(HBaseConfiguration conf) {
     TableServers connection;
     synchronized (HBASE_INSTANCES) {
-      String instanceName = conf.get(HBASE_DIR, DEFAULT_HBASE_DIR);
+      String instanceName = conf.get(HBASE_DIR);
 
       connection = HBASE_INSTANCES.get(instanceName);
 
@@ -88,7 +88,7 @@ public class HConnectionManager implements HConstants {
   public static void deleteConnection(HBaseConfiguration conf) {
     synchronized (HBASE_INSTANCES) {
       TableServers instance =
-        HBASE_INSTANCES.remove(conf.get(HBASE_DIR, DEFAULT_HBASE_DIR));
+        HBASE_INSTANCES.remove(conf.get(HBASE_DIR));
       if (instance != null) {
         instance.closeAll();
       }
